## Change log

### 1.1.1
* Fix - Removed the "prepare" statement from the destinations "filter_countries" function.
* Fix - Fixed extra spacing on Included and Not-Included items list

### 1.1.0
* New totally awesome version! The visual was fully redesigned
* Added compatibility with LSX 2.0
* Dev - New project structure
* Dev - UIX updated + Fixed issue with sub tabs click (settings)
* Dev - Added in a filter to call the Tours Featured image for the Departure Day.
* Dev - Added the accommodations room images to the pool of possible itinerary day images.
* Dev - Allowing the to_country_regions() to be ordered by the menu order or any other valid WP_Query order
* Fix - Fixed scripts/styles loading order
* Fix - Fixed many small issues

### 1.0.8
* Fix - LSX tabs working integrated with TO tabs (dashboard settings)
* Fix - Fixed admin styles (help and add-on pages)
* Fix - UIX framework saving all tabs

### 1.0.7
* Dev - Added .editorconfig file to help developers to maintain consistent coding styles between different editors and IDEs
* Fix - Removed "read more" from regions excerpt widgets on destination archive page
* Fix - Small fix on TO custom post type (single template - CSS) for small breakpoints
* Dev - LSX Customizer SASS selector extented to new FacetWP selectors
* Dev - Make the team image displays square
* Dev - Enable BS sliders on all small breakpoints
* Dev - New slider code for: Widgets, Regions (destination archive), and Related items section
* Dev - CMB updated (copied from LSX Banners)
* Dev - Changing the archives and widgets to show only the countries
* Dev - Added in a filters for the itinerary image so 3rd party plugins and themes can overwrite it if they want to
* Dev - Added in a filter for the destinations facets, so they only display the countries
* Dev - Add .editorconfig file to help developers to maintain consistent coding styles between different editors and IDEs
* Dev - Add RTL styles option
* Dev - New folder structure for CSS files