@@ -3,6 +3,7 @@
 ### 1.1.1
 * Fix - Removed the "prepare" statement from the destinations "filter_countries" function.
 * Fix - Fixed extra spacing on Included and Not-Included items list
+* Fix - Crop huge excerpts o archive and widget items.
 
 ### 1.1.0
 * New totally awesome version! The visual was fully redesigned
